# kalman-filter

./: .gitignore  2d_plot.sh  3d_plot.sh  3d_variance.sh  CMakeLists.txt  Makefile  README.md  README_explanations.md  variance_3d_pos.sh
inc/: DataStorage.h  KalmanFilter.h  UdpClient.h  main.h
scripts/: constants.py  filters.py  grabber.py  kalman_filter.py  kalman_filter_v2.py  kf_partial.py  kf_speedrun.py  real_kalman.py  tmp.txt  utils.py  utils_v2.py
scripts/pfx/: system.reg  user.reg
scripts/pfx/drive_c/users/armand/: Desktop  My Documents
src/: DataStorage.cpp  KalmanFilter.cpp  UdpClient.cpp  main.cpp  utils.cpp
tools/: 2d_variance.sh
